finally auth and ???logout??? add ui and form, refresh login page, add input for login

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
     max-width: 1264px;
     padding: 0 32px;
 }
+
+.login__wrap {
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
